<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FOOD</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="enter_email">Enter_Email</string>
    <string name="reenter_email">RE-Enter_Email</string>
    <string name="button">Send</string>
    <string name="username">Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="re_enter_pw">Re-enter password</string>
    <string name="create_account">Create Account</string>
    <string name="re_enter_email">Re_enter Email</string>
    
    
</resources>
